Chapter04/code/platform/landing zones/tenant 2/workload/namespaces.yaml
apiVersion: v1
kind: Namespace 
metadata:
  name: tenant2-workload-ns1
  labels:
    tenant: tenant2    
    istio-injection: enabled
  annotations:
    scheduler.alpha.kubernetes.io/defaultTolerations: '[{"operator": "Equal", "value": "workload", "effect": "NoSchedule", "key": "usage"}]'
---
apiVersion: v1
kind: Namespace 
metadata:
  name: tenant2-workload-ns2
  labels:
    tenant: tenant2    
    istio-injection: enabled
  annotations:
    scheduler.alpha.kubernetes.io/defaultTolerations: '[{"operator": "Equal", "value": "workload", "effect": "NoSchedule", "key": "usage"}]'
---
